Tag branches/1.3 r3085 as tags/1.3.14